Try to fix layout shift

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 /* header and nav layout */
 header {
   height: var(--nav-height);
+  display: none;
 }
 
 header .header.block {
